Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/TangoLSX_API.h


TANGOAPI int TANGOCALL LSX_SetSwitchPolarity (int lLSID, int lXP, int lYP, int lZP, int lAP);

TANGOAPI int TANGOCALL LSX_SetSwitchActive (int lLSID, int lXA, int lYA, int lZA, int lAA);

TANGOAPI int TANGOCALL LSX_SetDigitalOutput (int lLSID, int lIndex, BOOL bValue);

TANGOAPI int TANGOCALL LSX_SetDigitalOutputs (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetDigitalInputs (int lLSID, int *plValue);

TANGOAPI int TANGOCALL LSX_SetDigitalOutputsE (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetDigitalInputsE (int lLSID, int *plValue);

TANGOAPI int TANGOCALL LSX_SetAnalogOutput (int lLSID, int lIndex, int lValue);

TANGOAPI int TANGOCALL LSX_GetAnalogInput (int lLSID, int lIndex, int *plValue);

TANGOAPI int TANGOCALL LSX_SetLimit (int lLSID, int lAxis, double dMinRange, double dMaxRange);

TANGOAPI int TANGOCALL LSX_SetLimitControl (int lLSID, int lAxis, BOOL bActive);

TANGOAPI int TANGOCALL LSX_GetEncoderMask (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_SetDigIO_Off (int lLSID, int lIndex);

TANGOAPI int TANGOCALL LSX_SetDigIO_Polarity (int lLSID, int lIndex, BOOL bHigh);

TANGOAPI int TANGOCALL LSX_SetDigIO_EmergencyStop (int lLSID, int lIndex);

TANGOAPI int TANGOCALL LSX_SetDigIO_Distance (int lLSID, int lIndex, BOOL bFkt, double dDist, int lAxis);

TANGOAPI int TANGOCALL LSX_SetEncoderPeriod (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetEncoderMask (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_SetController (int lLSID, int lXC, int lYC, int lZC, int lAC);

TANGOAPI int TANGOCALL LSX_SetControllerCall (int lLSID, int lCtrCall);

TANGOAPI int TANGOCALL LSX_SetControllerSteps (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetControllerFactor (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetControllerTWDelay (int lLSID, int lCtrTWDelay);

TANGOAPI int TANGOCALL LSX_SetEncoderRefSignal (int lLSID, int lXR, int lYR, int lZR, int lAR);

TANGOAPI int TANGOCALL LSX_SetEncoderPosition (int lLSID, BOOL bValue);

TANGOAPI int TANGOCALL LSX_SetControllerTimeout (int lLSID, int lACtrTimeout);

TANGOAPI int TANGOCALL LSX_SetEncoderActive (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_GetSwitches (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_SetBPZTrackballFactor (int lLSID, double dAValue);

TANGOAPI int TANGOCALL LSX_SetBPZTrackballBackLash (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_SetBPZJoyspeed (int lLSID, int lAPar, double dAValue);

TANGOAPI int TANGOCALL LSX_GetBPZTrackballFactor (int lLSID, double *pdAValue);

TANGOAPI int TANGOCALL LSX_GetBPZTrackballBackLash (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetBPZJoyspeed (int lLSID, int lAPar, double *pdAValue);

TANGOAPI int TANGOCALL LSX_GetLimitControl (int lLSID, int lAxis, BOOL *pbActive);

TANGOAPI int TANGOCALL LSX_SetAutoLimitAfterCalibRM (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_GetAutoLimitAfterCalibRM (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetSwitchPolarity (int lLSID, int *plXP, int *plYP, int *plZP, int *plRP);

TANGOAPI int TANGOCALL LSX_GetSwitchActive (int lLSID, int *plXA, int *plYA, int *plZA, int *plRA);

TANGOAPI int TANGOCALL LSX_GetTargetWindow (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetEncoderPeriod (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetEncoderRefSignal (int lLSID, int *plXR, int *plYR, int *plZR, int *plRR);

TANGOAPI int TANGOCALL LSX_GetEncoderPosition (int lLSID, BOOL *pbValue);

TANGOAPI int TANGOCALL LSX_GetEncoderActive (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetController (int lLSID, int *plXC, int *plYC, int *plZC, int *plRC);

TANGOAPI int TANGOCALL LSX_GetControllerCall (int lLSID, int *plCtrCall);

TANGOAPI int TANGOCALL LSX_GetControllerSteps (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetControllerFactor (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);


TANGOAPI int TANGOCALL LSX_GetControllerTWDelay (int lLSID, int *plCtrTWDelay);

TANGOAPI int TANGOCALL LSX_GetControllerTimeout (int lLSID, int *plACtrTimeout);

TANGOAPI int TANGOCALL LSX_GetCtrFastMove (int lLSID, BOOL *pbActive);

TANGOAPI int TANGOCALL LSX_ClearCtrFastMoveCounter (int lLSID);

TANGOAPI int TANGOCALL LSX_GetCtrFastMoveCounter (int lLSID, int *plXC, int *plYC, int *plZC, int *plRC);

TANGOAPI int TANGOCALL LSX_ClearEncoder (int lLSID, int lAxis);

TANGOAPI int TANGOCALL LSX_GetEncoder (int lLSID, double *pdXP, double *pdYP, double *pdZP, double *pdRP);

TANGOAPI int TANGOCALL LSX_GetLimit (int lLSID, int lAxis, double *pdMinRange, double *pdMaxRange);


TANGOAPI int TANGOCALL LSX_SetSwitchType (int lLSID, int lXP, int lYP, int lZP, int lAP);

TANGOAPI int TANGOCALL LSX_GetSwitchType (int lLSID, int *plXP, int *plYP, int *plZP, int *plRP);