Tango/DLL Examples/Java/Tango_Example/src/components/TANGODLL.java


    /**
     *
     * @param lLSID
     * @param lAPar
     * @param pdAValue
     * @return
     */
    public int LSX_GetBPZJoyspeed (int lLSID, int lAPar, DoubleByReference pdAValue);

    /**
     *
     * @param lLSID
     * @param lAPar
     * @param dAValue
     * @return
     */
    public int LSX_SetBPZJoyspeed (int lLSID, int lAPar, double dAValue);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetBPZTrackballBackLash (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetBPZTrackballBackLash (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param pdAValue
     * @return
     */
    public int LSX_GetBPZTrackballFactor (int lLSID, DoubleByReference pdAValue);

    /**
     *
     * @param lLSID
     * @param dAValue
     * @return
     */
    public int LSX_SetBPZTrackballFactor (int lLSID, double dAValue);

    /**
     *
     * @param lLSID
     * @param plFlags
     * @return
     */
    public int LSX_GetAutoLimitAfterCalibRM (int lLSID, IntByReference plFlags);

    /**
     *
     * @param lLSID
     * @param lFlags
     * @return
     */
    public int LSX_SetAutoLimitAfterCalibRM (int lLSID, int lFlags);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @param pdMinRange
     * @param pdMaxRange
     * @return
     */
    public int LSX_GetLimit (int lLSID, int lAxis, DoubleByReference pdMinRange, DoubleByReference pdMaxRange);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @param dMinRange
     * @param dMaxRange
     * @return
     */
    public int LSX_SetLimit (int lLSID, int lAxis, double dMinRange, double dMaxRange);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @param pbActive
     * @return
     */
    public int LSX_GetLimitControl (int lLSID, int lAxis, IntByReference pbActive);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @param bActive
     * @return
     */
    public int LSX_SetLimitControl (int lLSID, int lAxis, boolean bActive);

    /**
     *
     * @param lLSID
     * @param plXA
     * @param plYA
     * @param plZA
     * @param plAA
     * @return
     */
    public int LSX_GetSwitchActive (int lLSID, IntByReference plXA, IntByReference plYA, IntByReference plZA, IntByReference plAA);

    /**
     *
     * @param lLSID
     * @param lXA
     * @param lYA
     * @param lZA
     * @param lAA
     * @return
     */
    public int LSX_SetSwitchActive (int lLSID, int lXA, int lYA, int lZA, int lAA);

    /**
     *
     * @param lLSID
     * @param plFlags
     * @return
     */
    public int LSX_GetSwitches (int lLSID, IntByReference plFlags);

    /**
     *
     * @param lLSID
     * @param plXP
     * @param plYP
     * @param plZP
     * @param plAP
     * @return
     */
    public int LSX_GetSwitchPolarity (int lLSID, IntByReference plXP, IntByReference plYP, IntByReference plZP, IntByReference plAP);

    /**
     *
     * @param lLSID
     * @param lXP
     * @param lYP
     * @param lZP
     * @param lAP
     * @return
     */
    public int LSX_SetSwitchPolarity (int lLSID, int lXP, int lYP, int lZP, int lAP);

    /**
     *
     * @param lLSID
     * @param plXP
     * @param plYP
     * @param plZP
     * @param plAP
     * @return
     */
    public int LSX_GetSwitchType (int lLSID, IntByReference plXP, IntByReference plYP, IntByReference plZP, IntByReference plAP);

    /**
     *
     * @param lLSID
     * @param lXP
     * @param lYP
     * @param lZP
     * @param lAP
     * @return
     */
    public int LSX_SetSwitchType (int lLSID, int lXP, int lYP, int lZP, int lAP);

    /**
     *
     * @param lLSID
     * @param lIndex
     * @param plValue
     * @return
     */
    public int LSX_GetAnalogInput (int lLSID, int lIndex, IntByReference plValue);

    /**
     *
     * @param lLSID
     * @param plValue
     * @return
     */
    public int LSX_GetDigitalInputs (int lLSID, IntByReference plValue);

    /**
     *
     * @param lLSID
     * @param plValue
     * @return
     */
    public int LSX_GetDigitalInputsE (int lLSID, IntByReference plValue);

    /**
     *
     * @param lLSID
     * @param lIndex
     * @param lValue
     * @return
     */
    public int LSX_SetAnalogOutput (int lLSID, int lIndex, int lValue);

    /**
     *
     * @param lLSID
     * @param lIndex
     * @param bFkt
     * @param dDist
     * @param lAxis
     * @return
     */
    public int LSX_SetDigIO_Distance (int lLSID, int lIndex, boolean bFkt, double dDist, int lAxis);

    /**
     *
     * @param lLSID
     * @param lIndex
     * @return
     */
    public int LSX_SetDigIO_EmergencyStop (int lLSID, int lIndex);

    /**
     *
     * @param lLSID
     * @param lIndex
     * @return
     */
    public int LSX_SetDigIO_Off (int lLSID, int lIndex);

    /**
     *
     * @param lLSID
     * @param lIndex
     * @param bHigh
     * @return
     */
    public int LSX_SetDigIO_Polarity (int lLSID, int lIndex, boolean bHigh);

    /**
     *
     * @param lLSID
     * @param lIndex
     * @param bValue
     * @return
     */
    public int LSX_SetDigitalOutput (int lLSID, int lIndex, boolean bValue);

    /**
     *
     * @param lLSID
     * @param lValue
     * @return
     */
    public int LSX_SetDigitalOutputs (int lLSID, int lValue);

    /**
     *
     * @param lLSID
     * @param lValue
     * @return
     */
    public int LSX_SetDigitalOutputsE (int lLSID, int lValue);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @return
     */
    public int LSX_ClearEncoder (int lLSID, int lAxis);

    /**
     *
     * @param lLSID
     * @param pdXP
     * @param pdYP
     * @param pdZP
     * @param pdAP
     * @return
     */
    public int LSX_GetEncoder (int lLSID, DoubleByReference pdXP, DoubleByReference pdYP, DoubleByReference pdZP, DoubleByReference pdAP);

    /**
     *
     * @param lLSID
     * @param plFlags
     * @return
     */
    public int LSX_GetEncoderActive (int lLSID, IntByReference plFlags);

    /**
     *
     * @param lLSID
     * @param lFlags
     * @return
     */
    public int LSX_SetEncoderActive (int lLSID, int lFlags);

    /**
     *
     * @param lLSID
     * @param plFlags
     * @return
     */
    public int LSX_GetEncoderMask (int lLSID, IntByReference plFlags);

    /**
     *
     * @param lLSID
     * @param lValue
     * @return
     */
    public int LSX_SetEncoderMask (int lLSID, int lValue);

    /**
     *
     * @param lLSID
     * @param dX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetEncoderPeriod (int lLSID, DoubleByReference dX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetEncoderPeriod (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param pbValue
     * @return
     */
    public int LSX_GetEncoderPosition (int lLSID, IntByReference pbValue);

    /**
     *
     * @param lLSID
     * @param bValue
     * @return
     */
    public int LSX_SetEncoderPosition (int lLSID, boolean bValue);

    /**
     *
     * @param lLSID
     * @param plXR
     * @param plYR
     * @param plZR
     * @param plAR
     * @return
     */
    public int LSX_GetEncoderRefSignal (int lLSID, IntByReference plXR, IntByReference plYR, IntByReference plZR, IntByReference plAR);

    /**
     *
     * @param lLSID
     * @param lXR
     * @param lYR
     * @param lZR
     * @param lAR
     * @return
     */
    public int LSX_SetEncoderRefSignal (int lLSID, int lXR, int lYR, int lZR, int lAR);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_ClearCtrFastMoveCounter (int lLSID);

    /**
     *
     * @param lLSID
     * @param plXC
     * @param plYC
     * @param plZC
     * @param plRC
     * @return
     */
    public int LSX_GetController (int lLSID, IntByReference plXC, IntByReference plYC, IntByReference plZC, IntByReference plRC);

    /**
     *
     * @param lLSID
     * @param lXC
     * @param lYC
     * @param lZC
     * @param lAC
     * @return
     */
    public int LSX_SetController (int lLSID, int lXC, int lYC, int lZC, int lAC);

    /**
     *
     * @param lLSID
     * @param plCtrCall
     * @return
     */
    public int LSX_GetControllerCall (int lLSID, IntByReference plCtrCall);

    /**
     *
     * @param lLSID
     * @param lCtrCall
     * @return
     */
    public int LSX_SetControllerCall (int lLSID, int lCtrCall);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetControllerFactor (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetControllerFactor (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetControllerSteps (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetControllerSteps (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param plACtrTimeout
     * @return
     */
    public int LSX_GetControllerTimeout (int lLSID, IntByReference plACtrTimeout);

    /**
     *
     * @param lLSID
     * @param lACtrTimeout
     * @return
     */
    public int LSX_SetControllerTimeout (int lLSID, int lACtrTimeout);

    /**
     *
     * @param lLSID
     * @param plCtrTWDelay
     * @return
     */
    public int LSX_GetControllerTWDelay (int lLSID, IntByReference plCtrTWDelay);

    /**
     *
     * @param lLSID
     * @param lCtrTWDelay
     * @return
     */
    public int LSX_SetControllerTWDelay (int lLSID, int lCtrTWDelay);

    /**
     *
     * @param lLSID
     * @param pbActive
     * @return
     */
    public int LSX_GetCtrFastMove (int lLSID, IntByReference pbActive);

    /**
     *
     * @param lLSID
     * @param plXC
     * @param plYC
     * @param plZC
     * @param plAC
     * @return
     */
    public int LSX_GetCtrFastMoveCounter (int lLSID, IntByReference plXC, IntByReference plYC, IntByReference plZC, IntByReference plAC);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetTargetWindow (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);
